--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,8 @@ dependencies {
     testImplementation "com.github.stefanbirkner:system-rules:1.19.0" // for managing environment variables
     testImplementation "com.github.tomakehurst:wiremock:2.26.0"       // for mocking HTTP server reponses
     testImplementation "org.hamcrest:hamcrest:2.1"
+    testImplementation group: 'com.testautomationguru.pdfutil', name: 'pdf-util', version: '0.0.3'
+
 }
 
 sourceSets {
