--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'jacoco'
+    //id 'jacoco'
     id 'groovy'
     id 'codenarc'
 }
@@ -129,6 +129,6 @@ codenarcTest {
     ignoreFailures = true
 }
 
-jacoco {
-  toolVersion = "0.8.3"
-}
+//jacoco {
+//  toolVersion = "0.8.3"
+//}
