--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     implementation 'com.vladsch.flexmark:flexmark-all:0.60.2' // for markdown to pdf conversion (sonarqube reports)
 
     testImplementation "org.spockframework:spock-core:1.3-groovy-2.4"
+    testImplementation ("com.athaydes:spock-reports:1.8.0") { transitive = false }
     testImplementation "com.lesfurets:jenkins-pipeline-unit:1.3"
     testImplementation "net.bytebuddy:byte-buddy:1.10.8"
     testImplementation "org.objenesis:objenesis:3.1"
@@ -112,6 +113,8 @@ test {
     testLogging {
         showStandardStreams = true
     }
+    systemProperty 'com.athaydes.spockframework.report.projectName', 'ods-jenkins-shared-library'
+    systemProperty 'com.athaydes.spockframework.report.projectVersion', version
 }
 
 codenarc {
